                         </div>
131 - добавил тег br <li>Стоимость <br>от 350 руб./60 минут</li>
319 - добавил br с классом  <p>Соревновательное начало повышает мотивацию<br class="br__320px"> в обучении</p></td>
328 - добавил br с классом  <p>Участвуют <br class="br__480px">в обучающих играх</p>

-------------------prepodavateli-i-stoimost.html------------------------


80 -  разделил на два параграфа и добавил грёбаные классы <p class="teachers__description teachers__description--1"><em>Занятия в наших мини-группах подготовки к ЕГЭ и ОГЭ ведут лучшие репетиторы Ростова-на-Дону.</em></p>
    <p class="teachers__description teachers__description--2"><em>В нашей команде только профессионалы своего дела</em></p>
87 - Добавил br <li>Опыт репетиторской работы наших преподавателей &ndash;<br class="br__480px br__320px"> от 8 до 40 лет.</li>
87 - Добавил br <li>Главный результат<br class="br__480px br__320px"> работы &mdash; десятки учеников, поступивших в вузы Ростова, Москвы, Санкт-Петербурга.
//////////////////////////////////////
img

оптимизировал на 90% headerBg.jpg
logo-320.png
logo-480.png
bg-320.jpg
bg-480.jpg
basicCompose-320.jpg
basicCompose-480.jpg
bg-whyMiniGroups-320.jpg
bg-whyMiniGroups-480.jpg
whyMiniGroups-320.png
whyMiniGroups-480.png
howDoWeWorkNew-320.png
howDoWeWorkNew-480.png
inst.png
ok.png
vk.png
YT.png
basicComposeMethods-320.png
basicComposeTeachers-320.png
basicComposeResult-320.png

netcat_files/19/20 добавил banner-tochilka-480.jpg
netcat_files/19/20 добавил banner-prevedi-druga-480.jpg
netcat_files/1/287 добавил callBackFormBg-480.jpg

///////////////////////////////
js

добавил файл script.js
///////////////////////////////////



планшет max-width: 769px
мобила max-width: 479px


в basicCompose на десктопе уменьшил высоту родителя на 5 пикселей до 555
whyMiniGroups на десктопе отсутсвовал бэкграунд сделал новый
обратить внимание на шрифты в форме!
в преимуществах не совпадает текст (дебильный)