@@ -85,8 +85,8 @@
         <li>Большинство наших преподавателей окончили с отличием ЮФУ(РГУ) и другие вузы.</li>
         <li>Более 30% из них &mdash; кандидаты наук.</li>
         <li>Более 20% из них &ndash; эксперты ЕГЭ, то есть преподаватели, которые проверяют работы на ЕГЭ.</li>
-        <li>Опыт репетиторской работы наших преподавателей &ndash;<br class="br__480px br__320px"> от 8 до 40 лет.</li>
-        <li>Главный результат<br class="br__480px br__320px"> работы &mdash; десятки учеников, поступивших в вузы Ростова, Москвы, Санкт-Петербурга.
+        <li>Опыт репетиторской работы наших преподавателей &ndash;<br class="br__320px"> от 8 до 40 лет.</li>
+        <li>Главный результат работы &mdash; десятки учеников, поступивших в вузы Ростова, Москвы, Санкт-Петербурга.
         </li>
       </ul>
     </div>
