@@ -40,10 +40,11 @@
 -------------------prepodavateli-i-stoimost.html------------------------
 
 
+в некоторых карточках отсутсвует красная линия с галочкой(возможно из-за разметки не верной в карточке)
+
 80 -  разделил на два параграфа и добавил грёбаные классы <p class="teachers__description teachers__description--1"><em>Занятия в наших мини-группах подготовки к ЕГЭ и ОГЭ ведут лучшие репетиторы Ростова-на-Дону.</em></p>
     <p class="teachers__description teachers__description--2"><em>В нашей команде только профессионалы своего дела</em></p>
-87 - Добавил br <li>Опыт репетиторской работы наших преподавателей &ndash;<br class="br__480px br__320px"> от 8 до 40 лет.</li>
-87 - Добавил br <li>Главный результат<br class="br__480px br__320px"> работы &mdash; десятки учеников, поступивших в вузы Ростова, Москвы, Санкт-Петербурга.
+87 - Добавил br <li>Опыт репетиторской работы наших преподавателей &ndash;<br class="px br__320px"> от 8 до 40 лет.</li>
 //////////////////////////////////////
 img
 
